Implementações no jogo. Exclusão dos alertas e inclusão de campos para demonstrar resultados. Adição de sons ao exibir as cores e ao clicar, assim como som de Game Over.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
             <div id="red"></div>
             <div id="green"></div>
         </div>
-        <div id="circle1"></div>
-        <div id="circle2">
-            <p>INICIAR</p>
+        <div id="circle1">
+            <div id="circle2">
+                <p>INICIAR</p>
+            </div>
+            <div id="textBox1">ROUNDS</div>
+            <div id="textBox2"></div>
+            <div id="textBox3"></div>
         </div>
+
     </div>
 
+    <audio src="assets/sons/toque.mp3" preload="auto" id="toque"></audio>
+    <audio src="assets/sons/gameover.wav" preload="auto" id="gameOver"></audio>
     <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
