Inclusão de comentários para melhor compreensão do código, assim como retirada de arquivos não utilizados. Foram removidas algumas linhas desnecessárias do código.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     </div>
 
-    <audio src="assets/sons/toque.mp3" preload="auto" id="toque"></audio>
-    <audio src="assets/sons/gameover.wav" preload="auto" id="gameOver"></audio>
+    <audio src="assets/sound/toque.mp3" preload="auto" id="toque"></audio>
+    <audio src="assets/sound/gameover.wav" preload="auto" id="gameOver"></audio>
     <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
